--- a/WebContent/html/bdyun/bdyun_index.html
+++ b/WebContent/html/bdyun/bdyun_index.html
@@ -24,7 +24,26 @@
 		<div class="panel-body">
 			<a href="http://www.baidu.com">百度云</a>
 			<span style="float:right">密码：afss</span>
-			
+		</div>
+	</div>
+	
+	<div class="panel panel-info" style="margin:5px 20px;">
+		<div class="panel-heading">
+			<h3 class="panel-title">Panel title</h3>
+		</div>
+		<div class="panel-body">
+			<a href="http://www.baidu.com">百度云</a>
+			<span style="float:right">密码：afss</span>
+		</div>
+	</div>
+	
+	<div class="panel panel-info" style="margin:5px 20px;">
+		<div class="panel-heading">
+			<h3 class="panel-title">Panel title</h3>
+		</div>
+		<div class="panel-body">
+			<a href="http://www.baidu.com">百度云</a>
+			<span style="float:right">密码：afss</span>
 		</div>
 	</div>
 	
