--- a/WebContent/html/new_index.html
+++ b/WebContent/html/new_index.html
@@ -18,16 +18,31 @@
 </head>
 <body>
 
-	<div id="page">
+	<div id="page" >
 		<!% include("common/menu.html"){}%>
+		<br/>
+		<br/>
+	
+		
+		<div class="content" style="text-align: left; ">
+			<div class="jumbotron" style="margin:0 20px;">
+				  <h1 style="font-size: 36px;">Welcome</h1>
+				  
+				  <br/>
+				  <p style="font-size: 16px;">tip:点击自己的头像可以完善个人信息</p>
+				  <br/>
+				  <br/>
+				  <br/>
+				  <br/>
+				  <br/>
+				  <br/> 
+				  <br/> 
 
-		<div class="content">
-			<p>
-				<strong>This is a demo.</strong><br /> Click the menu icon to open
-				a custom styled menu.
-			</p>
+				<p style="float:right">广大陆丰同乡会</p>
+				</div>
 		</div>
 	</div>
+	
 	
 </body>
 </html>
