--- a/WebContent/html/goods/goods_index.html
+++ b/WebContent/html/goods/goods_index.html
@@ -148,11 +148,16 @@ color: #fff  !important;
 <body>
 	<div id="page" style="padding-bottom:60px;">
 	<!% include("../common/menu.html"){}%>
+
 	<footer class="ui-footer ui-footer-btn" style="height: auto;">
+
 	<div>
 		<a href="${constant.projectName}/goods/getGoods.do?method=0" class=" ui-btn-primary foot_btn" style="border-right:1px solid transparent;color: aliceblue;">捡到东西</a>
 		<a href="${constant.projectName}/goods/getGoods.do?method=1"  class=" ui-btn-primary foot_btn" style="color: aliceblue;" >丢东西了</a>
 	</div>
+		<div style="padding-top: 6px;padding-bottom: 6px;line-height: 14px;text-align: center;">
+			<a href="http://www.beian.miit.gov.cn" target="_blank">粤ICP备19151113号</a>
+		</div>
 	<!-- <a href="${constant.projectName}/goods/getGoods.do" class="ui-btn-lg ui-btn-primary foot_btn" style="color: aliceblue;">捡到东西</a>
 	<a href="${constant.projectName}/goods/getGoods.do" class="ui-btn-lg ui-btn-primary foot_btn" style="color: aliceblue;">丢东西了</a> -->
 	<!-- <a href="#nav_new_bdyun" class="ui-btn-lg ui-btn-primary" style="color: aliceblue;">我要分享</a> -->       
