--- a/WebContent/html/goods/saveGoods.html
+++ b/WebContent/html/goods/saveGoods.html
@@ -167,7 +167,10 @@ border-color: #adadad;
 <footer class="ui-footer ui-footer-btn" style="height: auto;">
 <div class="ui-form-item ">
 			 <span id="btn_add_goods"  class="input-group-addon btn"  style="border-radius: 4px;border-left: 1;line-height: 25px;"id="basic-addon1">提交</span>
-			 </div>
+</div>
+	<div style="padding-top: 6px;padding-bottom: 6px;line-height: 14px;text-align: center;">
+		<a href="http://www.beian.miit.gov.cn" target="_blank"> 粤ICP备19151113号 </a>
+	</div>
 </footer>
 
 
